Changing To Larger Icon

--- a/templates/meta.html
+++ b/templates/meta.html
@@ -3,7 +3,7 @@
 <meta name="twitter:site" content="@Dolthub" />
 <meta name="twitter:title" content="{post_title}" />
 <meta name="twitter:description" content="{post_summary}" />
-<meta name="twitter:image" content="https://www.dolthub.com/blog/favicon-32x32.png" />
+<meta name="twitter:image" content="https://www.dolthub.com/blog/icons/icon-512x512.png" />
 
 <!-- To Prevent Search Engines From Indexing The Demo -->
 <meta name="robots" content="noindex">
