--- a/templates/meta.html
+++ b/templates/meta.html
@@ -5,6 +5,14 @@
 <meta name="twitter:description" content="{post_summary}" />
 <meta name="twitter:image" content="https://www.dolthub.com/blog/icons/icon-512x512.png" />
 
+<!-- General Cards - Not Necessary To Function On Discord (Twitter's Card Works Just Fine For Discord) -->
+<!-- There Are Tags For Articles That You May Be Interested In - https://ogp.me/#type_article -->
+<meta property="og:title" content="{post_title}" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="{post_url}" />
+<meta property="og:image" content="https://www.dolthub.com/blog/icons/icon-512x512.png" />
+<meta property="og:description" content="{post_summary}" />
+
 <!-- To Prevent Search Engines From Indexing The Demo -->
 <meta name="robots" content="noindex">
 
